objects/Journeys__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Communication__c</fullName>
        <label>Name of Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Journeys</label>
    <listViews>
        <fullName>Best_View</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Name_of_Communication__c</columns>
        <filterScope>Everything</filterScope>
        <label>Best View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>